# insights-extractor

./: .gitignore  README.md  config.py  exceptions.py  json_utils.py  models.py  pyproject.toml  requirements.txt  temp-0.json  temp_dir.py
classification/: prep_utils.py
classification/utils/: keywords.py
document/: page.py  process.py  table.py  utils.py
ner/: __init__.py
nlp/: pre_process.py
settings/: config.py
src/: setup.cfg  setup.py
src/extractlib/: __init__.py
src/extractlib/classification/: prep_utils.py
src/extractlib/classification/utils/: keywords.py
src/extractlib/document/: page.py  process.py  table.py  utils.py
src/extractlib/models/: table.py
src/extractlib/ner/: __init__.py
src/extractlib/nlp/: pre_process.py  stopwords.py
src/extractlib/settings/: __init__.py  config.py
src/extractlib/utils/: json_utils.py
src/insights_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/requirements/: requirements.txt
src/t_extractlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: classification.py  pre_process.py  prep_utils.py  table.py
utils/: json_utils.py
