[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "spacy == 3.5.2; python_version >= '3.7'",
  "nltk == 3.8.1; python_version >= '3.7'",
  "PyMuPDF == 1.21.1; python_version >= '3.7'",
  "camelot-py == 0.11.0; python_version >= '3.6'",
  "opencv-python == 4.7.0.72; python_version >= '3.6'",
  "ghostscript == 0.7; python_version >= '3.6'"
]
name = "insights-extractor"
version = "0.1.3"
authors = [
  { name="Trae Moore", email="trae.dev@gmail.com" },
]
description = "Efficient PDF analysis, text extraction, preprocessing, and pattern recognition with customizable configurations and utilities."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["nltk", "spaCy", "Pymupdf", "Camelot", "OpenCV", "Ghostscript", "insight-extractor", "pdf extraction", "pdf data extraction", "pdf data", "classification", "keyword extraction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/traemoore/insights-extractor"
"Tests" =  "https://github.com/traemoore/insights-extractor-test"
"Bug Tracker" = "https://github.com/traemoore/insights-extractor/issues"